syntax = "proto3";

option java_package = "grpc.sum";
option java_multiple_files = true;

service SumService {
  rpc CalculateSum (SumRequest) returns (SumResponse);
}

message SumRequest {
  repeated int32 numbers = 1;
}

message SumResponse {
  int32 result = 1;
}

